# shotgun

./: CMakeLists.txt  README.md
include/: frame_timecode.h  frame_timecode_pair.h  scene_manager.h  transnetv2.h  video_stream.h
scripts/: transnetv2_inference.py
src/: config.cpp  config.h  frame_timecode.cpp  main.cpp  scene_manager.cpp  transnetv2.cpp  video_stream.cpp
